# nlpwork

./: .dockerignore  Dockerfile  README.md  alembic.ini  digital_empathy_master_plan.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20241114_0001_init_schema.py  20241114_0002_add_analysis_text.py
data/: app.db
deploy/: docker-compose.yml  prometheus.yml
docs/ops/: runbook.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx
rules/: demo_rules.yaml
scripts/: seed_demo_data.py
src/: app.py
src/config/: settings.py
src/core/: rate_limit.py
src/data/: analysis_log_repo.py  chat_message_repo.py  event_snapshot_repo.py  filter_audit_repo.py  search_repo.py
src/db/: base.py  session.py
src/middleware/: logging.py  metrics.py
src/models/: __init__.py  analysis_log.py  chat_message.py  event_snapshot.py  filter_audit.py  mixins.py
src/schemas/: analyze.py  chat.py  event.py  filter.py  search.py  suggest.py
src/security/: __init__.py  auth.py
src/services/: analyzer.py  chat_gateway.py  event_analyzer.py  filter.py  keyword_suggest.py  search.py
tests/api/: test_analyze_endpoint.py  test_chat_endpoint.py  test_event_endpoint.py  test_filter_endpoint.py  test_search_endpoint.py
tests/integration/: conftest.py  test_api_endpoints.py  test_websocket.py
tests/perf/: locustfile.py
tests/services/: test_analyzer.py  test_chat_gateway.py  test_event_analyzer.py  test_filter.py  (+1 more)
(+74 files in other folders)
